--- a/displayaddon/package.json
+++ b/displayaddon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Display Control Addon",
+  "name": "displayControlAddon",
   "version": "1.0.0",
   "description": "Send display commands to the remote display controller",
   "main": "",
