--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "DisplayLib.js",
   "author": "Jim Zagrobelny",
   "scripts": {
-    "predeploy": "coffee -c DisplayLib.coffee"
+    "install": "coffee -c DisplayLib.coffee"
   },
   "devDependencies": {
     "coffee-script": "^1.9.3"
