--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "Jim Zagrobelny",
   "scripts": {
     "install": "coffee -c DisplayLib.coffee",
-    "test": "coffee -c *.coffee && node test.js"
+    "test": "coffee -c *.coffee && node test-server.js"
   },
   "devDependencies": {
-    "coffee-script": "^1.9.3"
+    "coffee-script": "^1.9.3",
+    "express": "^4.13.0"
   }
 }
