--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "body-parser": "^1.13.1",
     "coffee-script": "^1.9.3",
+    "es6-promise": "^2.3.0",
     "express": "^4.13.0"
   }
 }
