--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.13.1",
     "coffee-script": "^1.9.3",
     "es6-promise": "^2.3.0",
-    "express": "^4.13.0"
+    "express": "^4.13.0",
+    "mongodb": "^2.0.36"
   }
 }
