--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coffee-script": "^1.9.3",
     "es6-promise": "^2.3.0",
     "express": "^4.13.0",
-    "mongodb": "^2.0.36"
+    "mongodb": "^2.0.36",
+    "displayaddon": "git+ssh://git@github.com:strangesast/displayaddon"
   }
 }
